--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <div id="particles-js"></div>
 
 <header>
-    <div class="logo">SpeechCare Clinic</div>
+    <div class="logo">SpeechCare By Sharmistha</div>
 
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
@@ -104,7 +104,6 @@
         <li>M.Sc. Microbiology – North Orissa University</li>
         <li>B.Sc. Botany – Fakir Mohan University</li>
         <li>CHSE Odisha – Science</li>
-        <li>BSE Odisha</li>
     </ul>
 </section>
 
@@ -114,23 +113,23 @@
         <input type="text" id="name" placeholder="Parent Name" required>
         <input type="text" id="child" placeholder="Child Name">
         <input type="text" id="concern" placeholder="Concern (ASD / ADHD / Speech Delay etc.)" required>
-        <input type="date" id="date" required>
-        <input type="time" id="time" required>
+        <input type="date" id="date" placeholder="date" required>
+        <input type="time" id="time" placeholder="time" required>
         <button type="submit">Book via WhatsApp</button>
     </form>
 </section>
 
 <section id="contact" class="glass section reveal">
     <h2>Contact Details</h2>
-    <p><strong>Phone:</strong> 033 3577 4493 | +91 98834 20656</p>
+    <p><strong>Phone:</strong> +91 33357 74493 | +91 98834 20656</p>
     <p><strong>Email:</strong> psharmistha91@gmail.com</p>
-    <p><strong>Clinic Hours:</strong> 9:00 AM – 9:00 PM</p>
+    <p><strong>Cousulting Hours:</strong> 9:00 AM – 9:00 PM</p>
 </section>
 
 <section class="glass section reveal">
     <h2>Clinic Location</h2>
     <iframe 
-        src="https://www.google.com/maps?q=Salt+Lake+Kolkata&output=embed"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12469.312516372893!2d88.43588983879506!3d22.594783124805932!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1771616693785!5m2!1sen!2sin"
         width="100%" 
         height="350" 
         style="border-radius:15px;border:none;">
@@ -144,3 +143,4 @@
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
+
